# secfinding

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  INTERNAL_SPEC.md  README.md  SPEC.md
examples/: custom_reportable.rs  serialize_json.rs
src/: adversarial_tests.rs  bridge.rs  evidence.rs  filter.rs  finding.rs  kind.rs  lib.rs  location.rs  projection.rs  reportable.rs  severity.rs  status.rs
src/finding/: builder.rs  error.rs  mod.rs  ops.rs  serialize.rs  types.rs  validate.rs
tests/: adversarial.rs  audit_verify.rs  break_it.rs  concurrent.rs  integration.rs  oom_simulation.rs  property.rs  unit.rs
tests/adversarial/: evidence.rs  finding.rs  location.rs
tests/concurrent/: secfinding_stress.rs
tests/integration/: test_detonation_evidence_roundtrip.rs  test_scald_dom_execution_roundtrip.rs  test_smoke.rs
tests/property/: proptest_filter_suite.rs  proptest_mass_roundtrip.rs  strategies.rs  test_evidence.rs  test_finding.rs  test_severity.rs
tests/unit/: bridge.rs  evidence.rs  filter.rs  finding.rs  kind.rs  reportable.rs  severity.rs  status.rs
