[package]
name = "secfinding"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Santh Project <contact@santh.dev>"]
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/secfinding"
description = "Universal security finding types for vulnerability scanners."
readme = "README.md"
keywords = ["security", "findings", "vulnerability", "scanner"]
categories = ["development-tools", "web-programming"]
exclude = ["/target", ".idea", ".vscode", ".DS_Store", "*.swp", "*.profraw"]

[features]
default = []
# Enables the in-tree secir bridge + bridge tests.
secir = { version = "0.3.0", optional = true }
# json-schema feature temporarily disabled pending proper chrono/uuid schema support
# json-schema = ["dep:schemars"]

[dependencies]
santh-error = { version = "0.2.0" }
secir = { version = "0.3.0", optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
# schemars = { version = "0.8", optional = true }

[dev-dependencies]
proptest = "1"
